# arg25-Projects

./: .gitmodules  LICENSE.md  README_template.md
EVVM-ZKEVVM/: README.md
invisible-zkevvm/: .claudeignore  .env.example  .gitignore  .gitmodules  .solhint.json  DEPLOYMENT_SUMMARY.md  MONOREPO.md  Makefile.foundry  QUICK_DEPLOY.md  README.md  foundry.toml  hardhat.config.js  package-lock.json  package.json  rust-toolchain.toml
invisible-zkevvm/broadcast/DeployEVVMCore.s.sol/421614/: run-1762936266525.json  run-latest.json
invisible-zkevvm/contracts/: Counter.sol  VotingFHE.sol
invisible-zkevvm/contracts/core/: EVVMCore.sol
invisible-zkevvm/contracts/example/: EVVMCafhe.sol
invisible-zkevvm/contracts/interfaces/: IEVVMStylus.sol
invisible-zkevvm/contracts/legacy/: EVVMCafhe.sol  README.md
invisible-zkevvm/contracts/staking/: StakingManager.sol
invisible-zkevvm/contracts/test/: Constants.sol  EVVMCoreTestBase.sol  EVVMCore_AdminFunctions.t.sol  EVVMCore_BlocksAndTransactions.t.sol  EVVMCore_Initialization.t.sol  EVVMCore_Payments.t.sol  EVVMCore_TokenWhitelist.t.sol  EVVMCore_Validators.t.sol  FHE_TESTING_GUIDE.md  MockERC20.sol  MockFHE.sol  README.md  TEST_CASES.md
invisible-zkevvm/contracts/treasury/: TreasuryVault.sol
invisible-zkevvm/deployments/: .gitkeep  arbitrum-sepolia.env  arbitrum-sepolia.txt  stylus-arbitrum-sepolia.txt
invisible-zkevvm/docs/: FHE_INTERFACE_PORT_RESEARCH.md  FHE_SETUP.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  SPEC.md  STAKING_ENCRYPTED_INPUTS.md  STYLUS_FHEVM_MIDDLEWARE.md  STYLUS_FHE_RESEARCH.md  TREASURY_GUIDE.md  WORKFLOW_GUIDE.md  evvm_migration_specs.md
invisible-zkevvm/relayer/: Cargo.toml  package.json  poc_relayer.ts
invisible-zkevvm/relayer/src/: server.rs
invisible-zkevvm/script/: DEPLOYMENT.md  DeployEVVMCore.s.sol  DeployEVVMCoreAdvanced.s.sol  README.md
invisible-zkevvm/scripts/: deploy.js  verify-contracts.sh
invisible-zkevvm/stylus-contracts/: CARGO_STYLUS_CHECK_RESULTS.md  CLAUDE.md  Cargo.toml  DOCS_LOCATION.md  OPTIMIZATION_STATUS.md  README.md  rust-toolchain.toml  simulate-run.sh  test.sh
invisible-zkevvm/stylus-contracts/.cargo/: config.toml
invisible-zkevvm/stylus-contracts/docs/: LITEPAPER_LOCATION.md  README.md
invisible-zkevvm/stylus-contracts/docs/archive/: CARGO_STYLUS_CHECK_RESULTS.md  DELIVERABLES.md  EXECUTION_RESULTS.md  FIX_APPLIED.md  KNOWN_ISSUES.md
invisible-zkevvm/stylus-contracts/docs/deployment/: DEPLOYMENT_PLAN.md
invisible-zkevvm/stylus-contracts/docs/development/: CLEANUP.md  STATUS.md  SUMMARY.md
invisible-zkevvm/stylus-contracts/docs/testing/: README_TESTING.md  TESTING_GUIDE.md  TEST_SPEC.md
invisible-zkevvm/stylus-contracts/evvm-cafhe/: Cargo.toml  rust-toolchain.toml
invisible-zkevvm/stylus-contracts/evvm-cafhe/src/: lib.rs
invisible-zkevvm/stylus-contracts/fhe-stylus/: COFHE_APPROACH_UPDATE.md  COFHE_INTERFACES_CREATED.md  COFHE_INTERFACES_STATUS.md  COFHE_INTERFACE_GENERATION.md  Cargo.toml
invisible-zkevvm/stylus-contracts/fhe-stylus/src/: cofhe.rs  cofhe_config.rs  cofhe_interfaces.rs  config.rs  fhe.rs  interfaces.rs  lib.rs  signature.rs  types.rs
invisible-zkevvm/stylus-contracts/litepaper/: COMMUNICATION_SCHEME.md  LITEPAPER.aux  LITEPAPER.md  LITEPAPER.tex  OVERVIEW.md  PDF_GENERATION_SUCCESS.md  README.md
invisible-zkevvm/stylus-contracts/litepaper/specs/: COMPILE.md  COMPILE_LATEX.md  LATEX_TO_PDF_PLAN.md
invisible-zkevvm/test/: Counter.test.js  EVVMCore_Payments_FHE.test.ts  TreasuryVault_FHE.test.ts
sebastianlujan-zkevvm/: .gitignore  README.md
