[workspace]
members = [
    "fhe-stylus",
    "evvm-cafhe",
]
resolver = "2"

[workspace.dependencies]
# Stylus SDK for Arbitrum smart contracts
stylus-sdk = "0.6.0"

# Alloy for Ethereum types and primitives (pinned to versions without ruint 1.17)
alloy-primitives = "0.7.2"
alloy-sol-types = "0.7.2"

# Standard library support
mini-alloc = "0.6.0"

[profile.dev]
panic = "abort"

# Tests need unwinding panics
[profile.test]
panic = "unwind"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"

# Patch ruint to older version to avoid const evaluation bug in 1.17.0
[patch.crates-io]
ruint = { git = "https://github.com/recmo/uint", rev = "0c07a4c3" }
# Override parity-scale-codec to latest 3.x which is compatible with scale-info 2.11.6
parity-scale-codec = { git = "https://github.com/paritytech/parity-scale-codec", tag = "v3.7.0" }
